# edge-quantized-bitnet

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
include/: kv_cache.hpp  memory_arena.hpp  weight_packing.hpp
src/engine/: main.cpp
src/kernels/: ternary_gemm.cu
